fix sidebar responsiveness for both mobile and average displays size (also fix it for Arabic language, now it goes to the right when switching to arabic language), fix white space on the top of racer code page (for mobile view)

--- a/frontend/src/components/layout/mainLayout/MainLayout.less
+++ b/frontend/src/components/layout/mainLayout/MainLayout.less
@@ -35,14 +35,13 @@
 
 .main-content {
     flex-grow: 1;
-    width: 100%;
     min-height: 100vh;
     background-color: @bg-page-light;
     padding: 0;
     transition: margin-top 0.3s ease;
 
     @media (max-width: 900px) {
-        margin-top: 64px;
+        margin-top: 58px;
     }
 
     @media (min-width: 901px) {
