--- a/frontend/src/pages/racerCode/RacerCode.less
+++ b/frontend/src/pages/racerCode/RacerCode.less
@@ -7,7 +7,6 @@
     justify-content: center;
     align-items: center;
     background-color: @bg-deep;
-    padding: 20px;
 }
 
 .code-card {
